--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -15,3 +15,14 @@
     font-size: 16px;
   }
 }
+
+.cards {
+  text-align: center;
+  padding: 100px 0;
+  h1 {
+    font-size: 30px;
+    font-weight: bold;
+    margin-top: 0px;
+    margin-bottom: 20px;
+  }
+}
