--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
-$light-gray: #F4F4F4;
+$red: #e74c3c;
+$blue: #3498db;
+$yellow: #f7dc6f;
+$orange: #FFC300;
+$green: #48c9b0;
+$gray: #8a8a8a;
+$light-gray: #f7f9f9;
