--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -48,8 +48,8 @@
 /* Dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px $gray;
-  border-color: $gray;
+  box-shadow: 1px 1px 4px $light-gray;
+  border-color: $light-gray;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
