--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $red: #e74c3c;
 $blue: #3498db;
-$yellow: #f7dc6f;
+$yellow: #ffb400;
 $orange: #FFC300;
 $green: #48c9b0;
 $gray: #8a8a8a;
