--- a/source/stylesheets/config/_fonts.scss
+++ b/source/stylesheets/config/_fonts.scss
@@ -1,8 +1,8 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Raleway:300,400,500");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Raleway:300,400,500");
 
 // Define fonts for body and headers
-$body-font: "Montserrat", "Helvetica", "sans-serif";
+$body-font: "Open Sans", "Helvetica", "sans-serif";
 $headers-font: "Raleway", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
